# usb-can

./: .gitmodules  .woodpecker.yml  CMakeLists.txt  README.md
board/: CMakeLists.txt  version_template.c  version_template.h
board/bluepill/: CMakeLists.txt  halm.config  memory.ld
board/bluepill/application/: board.c  board.h  main.c
board/lpc17xx_devkit/: CMakeLists.txt  halm.config  memory.ld
board/lpc17xx_devkit/application/: board.c  board.h  gppwm_dma.c  gppwm_dma.h  main.c  memory.ld  pwm_indicator.c  pwm_indicator.h
board/lpc17xx_devkit/bootloader/: debug.ld  main.c  memory.ld
board/lpc17xx_devkit/shared/: board_shared.c  board_shared.h
board/lpc43xx_devkit/: CMakeLists.txt  halm.config  memory.ld  memory_nor.ld
board/lpc43xx_devkit/application/: board.c  board.h  main.c
board/lpc43xx_devkit/bootloader/: main.c
board/lpc43xx_devkit/shared/: board_shared.c  board_shared.h
cmake/: GetGitInfo.cmake
core/: CMakeLists.txt  can_proxy.c  can_proxy.h  can_proxy_defs.c  can_proxy_defs.h  dfu_defs.h  eeprom_24xx.c  eeprom_24xx.h  flash_loader.c  flash_loader.h  helpers.h  indicator.h  led_indicator.c  led_indicator.h  param_storage.c  param_storage.h  proxy_port.c  proxy_port.h  stubs.c  system.c  system.h  version.h  version_template.h
